--- a/index.html
+++ b/index.html
@@ -4,10 +4,30 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
+		<script
+			src="https://kit.fontawesome.com/e260e9514a.js"
+			crossorigin="anonymous"
+		></script>
 		<script src="script.js" defer></script>
 		<title>Document</title>
 	</head>
-	<body></body>
+	<body>
+		<div class="container">
+			<form id="search-location-form">
+				<div class="search-location-input">
+					<input type="text" id="location" placeholder="City name" />
+					<button type="submit" class="btn-icon">Search</button>
+				</div>
+				<span class="error"></span>
+			</form>
+		</div>
+	</body>
 </html>
