change webpage title

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			crossorigin="anonymous"
 		></script>
 		<script src="script.js" defer></script>
-		<title>Document</title>
+		<title>Weather App</title>
 	</head>
 	<body>
 		<div class="container">
